# pedidos

./: .dir-locals.el  .projectile  CMakeLists.txt  readme.org
src/: datos.c  datos.h  global.h  main.c
src/analizador/: lexico.c  lexico.h  makefile  parser.y  scanner.l  sintactico.c  sintactico.h  sintactico.output
